(as suggested by David Teller) should enable large memory areas to be
used more effectively, in particular those over 2Gb where OS support
has been enabled.  The initially requested memory is no longer
reserved, but as this malloc is able to work with non-contiguous
memory chunks that should not matter.

Both Rterm and Rgui now give usage information via the --help
command-line flag.



rw1081
======

Files in inst/ are installed later in the process of installing a
package (at the request of Ray Brownrigg: the build process was as
documented in `Writing R Extensions').  CVS files will not be installed.

The fast bmp/png/jpeg code introduced in R 1.8.0 is used for saving
from menus (and savePlot()) as well as for the devices.

Lines drawn at the extreme top or right of the device region (e.g. by
box(which="outer")) might have been drawn one pixel too far from the
origin and so perhaps clipped.

In 1.8.0 only, the bottom line of pixels was not copied to the file
for png/jpeg/bmp device plots (as the Windows GDI function used was
incorrectly documented).

File src/nmath/dnt.c was not being built for the standalone Rmath library.

packageStatus() now works under Windows.

Fixed instability under some Windows versions associated with 
double buffering of the windows() device. (PR#5173)



rw1080
======

The initial size and position of the MDI frame can be set in Rconsole:
see the comments in .../etc/Rconsole.  The initial position of the
console window and graphics windows can be set in Rconsole and in the
GUI Preferences editor.

The windows() graphics device now has arguments xpos and ypos to set
the initial position, overriding the settings in Rconsole.

The windows() device has a form of double-buffering: the visible plot
is updated only when there has been no plotting for 0.1sec or if the
plot has not been updated for 0.5sec.  This is optional (but on by
default) and the timings can be changed: see ?windows.
